  causing te terms to fail in gamm. Fixed.

* minor change to te constructor. Any unpenalized margin now has 
  corresponding penalty rank dropped along with penalty.

* Code for handling sp's fixed at exactly zero was badly thought out, and 
  could easily fail. fixed.

* TPRS prediction code made more efficient, partly by use of BLAS. Large
  dataset setup also made more efficient using BLAS.

* bam now uses LAPACK version of qr, for model matrix QR, since it's 
  faster and uses BLAS.

1.7-13

** The Lanczos routine in mat.c was using a stupidly inefficient check for 
  convergence of the largest magnitude eigenvectors. This resulted in 
  far too many Lanczos steps being used in setting up thin plate regression 
  splines, and a noticeable speed penalty. This is now fixed, with many thanks
  David Shavlik for reporting the slow down.  

* Namespace modified to import from methods. Dependency on stats and graphics
  made explicit.

* "re" smooths are no longer subject to side constraint under nesting (since
  this is almost alway un-necessary and undesirable, and often unexpected).

* side.con modified to allow smooths to be excluded and to allow side 
  constraint computation to take account of penalties (unused at present).

1.7-12

* bam can now compute the leading order QR decomposition on a cluster
  set up using the parallel package.

* Default k for "tp" and "ds" modified so that it doesn't exceed  100 + 
  the null space dimension (to avoid complaints from users smoothing in 
  quite alot of dimensions). Also default sub-sample size reduced to 2000.

* Greater use of BLAS routines in the underlying method code. In particular 
  all leading order operations count steps for gam fitting now use BLAS. 
  You'll need R to be using a rather fancy BLAS to see much difference, 
  however. 

* Amusingly, some highly tuned blas libraries can result in lapack not always 
  giving identical eigenvalues when called twice with the same matrix. The 