@@ -107,7 +107,7 @@ regions for quantities derived from the model.
 Chambers and Hastie (1993) Statistical Models in S. Chapman & Hall.
 
 Marra, G and S.N. Wood (2012) Coverage Properties of Confidence Intervals for Generalized Additive
-Model Components. Scandinavian Journal of Statistics.
+Model Components. Scandinavian Journal of Statistics, 39(1), 53-74.
 
 Wood S.N. (2006b) Generalized Additive Models: An Introduction with R. Chapman
 and Hall/CRC Press.
